--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Floaty Color Colock">
 	<meta property="og:description" content="Can be seen the weather in your area, not to mention a clock. It is a little pretty start page.">
-	<meta property="og:image" content="./assets/img/ogp-fcc.png">
+	<meta property="og:image" content="http://woopsdez.github.io/floaty-color-clock/assets/img/ogp-fcc.png">
 	<meta property="og:url" content="http://woopsdez.github.io/floaty-color-clock/">
 	<meta property="og:site_name" content="Floaty Color Colock">
 	<meta name="twitter:card" content="summary_large_image">
