タイトルを定義

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:creator" content="@woopsdez">
 	<!-- ogp -->
-	<title>Start Page</title>
+	<title>Floaty Color Clock</title>
 	<link href="assets/css/screen.css" rel="stylesheet" media="screen">
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
