--- a/index.html
+++ b/index.html
@@ -138,61 +138,71 @@
 			</section> -->
 		</div>
 
-			<footer>
-				&copy; <a href="http://mikiishijima.com">Miki Ishijima</a> 2016
-			</footer>
+		<footer>
+			&copy; <a href="http://mikiishijima.com">Miki Ishijima</a> 2016
+		</footer>
+	</section>
+
+	<div class="detail" id="target">
+		<section class="clock">
+			<time class="hm slidein"><span id="numH">00</span><span id="blink">:</span><span id="numM">00</span></time>
+			<div class="hanging slidein">
+				<time class="dw" id="dw">hogehoge</time>
+				<span class="ar" id="areaName"><small>fugafuga</small></span>
+			</div>
 		</section>
 
-		<div class="detail" id="target">
-			<section class="clock">
-				<time class="hm slidein"><span id="numH">00</span><span id="blink">:</span><span id="numM">00</span></time>
-				<div class="hanging slidein">
-					<time class="dw" id="dw">hogehoge</time>
-					<span class="ar" id="areaName"><small>fugafuga</small></span>
-				</div>
-			</section>
+		<section class="weather">
+			<div class="liner"></div>
+			<ul>
+				<li>
+					<time>00<small>h</small></time>
+					<i class="wi wi-day-sunny"></i>
+					<span class="rainfall">can't loading</span>
+				</li>
+				<li>
+					<time>06<small>h</small></time>
+					<i class="wi wi-day-sunny"></i>
+					<span class="rainfall">can't loading</span>
+				</li>
+				<li>
+					<time>12<small>h</small></time>
+					<i class="wi wi-day-sunny"></i>
+					<span class="rainfall">can't loading</span>
+				</li>
+				<li>
+					<time>18<small>h</small></time>
+					<i class="wi wi-day-sunny"></i>
+					<span class="rainfall">can't loading</span>
+				</li>
+			</ul>
+		</section>
 
-			<section class="weather">
-				<div class="liner"></div>
-				<ul>
-					<li>
-						<time>00<small>h</small></time>
-						<i class="wi wi-day-sunny"></i>
-						<span class="rainfall">can't loading</span>
-					</li>
-					<li>
-						<time>06<small>h</small></time>
-						<i class="wi wi-day-sunny"></i>
-						<span class="rainfall">can't loading</span>
-					</li>
-					<li>
-						<time>12<small>h</small></time>
-						<i class="wi wi-day-sunny"></i>
-						<span class="rainfall">can't loading</span>
-					</li>
-					<li>
-						<time>18<small>h</small></time>
-						<i class="wi wi-day-sunny"></i>
-						<span class="rainfall">can't loading</span>
-					</li>
-				</ul>
-			</section>
-
-			<div class="name">
-				<i class="fa fa-clock-o"></i> Floaty Color Clock
-			</div>
-
-			<a href="" class="btn-fullscreen" id="fullscreenSwitch" onclick="requestFullscreen()">
-				<span class="fa-stack fa-lg">
-					<i class="fa fa-square fa-stack-2x"></i>
-					<i class="fa fa-expand fa-stack-1x fa-inverse"></i>
-				</span>
-			</a>
+		<div class="name">
+			<i class="fa fa-clock-o"></i> Floaty Color Clock
 		</div>
 
-		<script   src="https://code.jquery.com/jquery-1.12.3.min.js"   integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ="   crossorigin="anonymous"></script>
-		<script src="assets/js/jp-prefecture.min.js"></script>
-		<script src="assets/js/floaty-color-clock.js"></script>
-		<script src="http://www.drk7.jp/weather/json/13.js"></script>
-	</body>
-	</html>
+		<a href="" class="btn-fullscreen" id="fullscreenSwitch" onclick="requestFullscreen()">
+			<span class="fa-stack fa-lg">
+				<i class="fa fa-square fa-stack-2x"></i>
+				<i class="fa fa-expand fa-stack-1x fa-inverse"></i>
+			</span>
+		</a>
+	</div>
+
+	<script   src="https://code.jquery.com/jquery-1.12.3.min.js"   integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ="   crossorigin="anonymous"></script>
+	<script src="assets/js/jp-prefecture.min.js"></script>
+	<script src="assets/js/floaty-color-clock.js"></script>
+	<script src="http://www.drk7.jp/weather/json/13.js"></script>
+
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-413655-13', 'auto');
+	ga('send', 'pageview');
+	</script>
+</body>
+</html>
