--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	
+	<!-- mobile -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
+
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+	<!-- details -->
+	<title>Floaty Color Clock</title>
 	<meta content="Floaty Color Colock" name="title">
 	<meta content="Can be seen the weather in your area, not to mention a clock. It is a little pretty start page." name="description">
 	<meta content='clock,temperature,startpage' name='keywords'>
+
 	<!-- ogp -->
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Floaty Color Colock">
@@ -16,8 +25,8 @@
 	<meta property="og:site_name" content="Floaty Color Colock">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:creator" content="@woopsdez">
-	<!-- ogp -->
-	<title>Floaty Color Clock</title>
+	
+	<!-- styles -->
 	<link href="assets/css/screen.css" rel="stylesheet" media="screen">
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
