--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
-	<link rel="icon" type="image/svg+xml" href="favicon.svg">
+	<link rel="apple-touch-icon" href="assets/img/icons/apple-touch-icon.png">
+	<link rel="icon" type="image/svg+xml" href="assets/img/icons/favicon.svg">
 
 	<!-- details -->
 	<title>Floaty Color Clock</title>
