--- a/index.html
+++ b/index.html
@@ -199,19 +199,8 @@
 		</a>
 	</div>
 
-	<script   src="https://code.jquery.com/jquery-1.12.3.min.js"   integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ="   crossorigin="anonymous"></script>
+	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jp-prefecture.min.js"></script>
 	<script src="assets/js/floaty-color-clock.js"></script>
-	<script src="http://www.drk7.jp/weather/json/13.js"></script>
-
-	<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	ga('create', 'UA-413655-13', 'auto');
-	ga('send', 'pageview');
-	</script>
 </body>
 </html>
