インラインで書いていたフルスクリーンボタンの発火をjsへ

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 			<i class="fa fa-clock-o"></i> Floaty Color Clock
 		</div>
 
-		<a href="" class="btn-fullscreen" id="fullscreenSwitch" onclick="requestFullscreen()">
+		<a href="" class="btn-fullscreen" id="fullscreenSwitch">
 			<span class="fa-stack fa-lg">
 				<i class="fa fa-square fa-stack-2x"></i>
 				<i class="fa fa-expand fa-stack-1x fa-inverse"></i>
