--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 			<section>
 				<ul class="btn-social">
-					<li><a href="http://twitter.com/share?text=Floaty%20Color%20Clock" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="https://twitter.com/intent/tweet?text=Floaty%20Color%20Clock%20http://woopsdez.github.io/floaty-color-clock/ onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;"><i class="fa fa-twitter"></i></a></li>
 					<li><a href="https://www.facebook.com/sharer/sharer.php?u=http://woopsdez.github.io/floaty-color-clock/" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="https://github.com/woopsdez/floaty-color-clock/" class="github" target="_blank"><i class="fa fa-github-alt"></i></a></li>
 				</ul>
